# OpenDevin

./: .dockerignore  Dockerfile.odlite  FOO.md  guide_to_move_hello_world.sh.txt  pyproject.toml  task.txt
.github/workflows/: dogfood.yml
agenthub/monologue_agent/utils/: memory.py
container/: Dockerfile
opendevin/action/: fileop.py
opendevin/sandbox/: Dockerfile
opendevin/server/: listen.py
opendevin/server/agent/: manager.py
