[tool.poetry]
name = "opendevin"
version = "0.1.0"
description = "OpenDevin: Code Less, Make More"
authors = ["OpenDevin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenDevin/OpenDevin"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "*"
datasets = "*"
docker = "*"
fastapi = "*"
json-repair = "*"
litellm = "*"
llama-index-core = "*"
llama-index-embeddings-openai = "*"
llama-index-vector-stores-chroma = "*"
numpy = "*"
pandas = "*"
playwright = "*"
pyjwt = "*"
seaborn = "*"
termcolor = "*"
toml = "*"
types-toml = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
